--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "start": "node app.js",
     "test:e2e": "vue-cli-service test:e2e",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "express": "^4.16.4",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
+    "serve-static": "^1.13.2",
     "vue": "^2.6.6",
     "vue-i18n": "^8.9.0",
     "vue-router": "^3.0.1",
